[metadata]
name = pycolog
description = Small console application that allows quick analyzation of log files
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/leupibr/pycolog'
author = Bruno Leupi
author_email = 'bruno.leupi@gmail.com'
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Pre-Alpha
    Environment :: Console :: Curses
    Environment :: Console
    Intended Audience :: Developer
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python
    Topic :: Internet :: Log Analysis
    Topic :: Software Development :: Bug Tracking
    Topic :: System :: Logging
    Topic :: Utilities
project_urls =
    Source=https://github.com/leupibr/pycolog
    Tracker=https://github.com/leupibr/issues

[options]
packages =
    pycolog
install_requires =
    PyYAML~=5.3.1
    pytest~=5.4.3
    windows-curses~=2.1.0;sys_platform=="win32"
python_requires = >=3.6
setup_requires=
    setuptools>=40.0
    setuptools_scm
    wheel
zip_safe = no

[options.entry_points]
console_scripts =
    pycolog=pycolog:console_main
